@@ -195,9 +195,12 @@ public class ProgrammingExercise extends Exercise {
         this.auxiliaryRepositories = auxiliaryRepositories;
     }
 
+    /**
+     * @return an unmodifiable list of auxiliary repositories used in the build plan
+     */
     @JsonIgnore
     public List<AuxiliaryRepository> getAuxiliaryRepositoriesForBuildPlan() {
-        return this.auxiliaryRepositories.stream().filter(AuxiliaryRepository::shouldBeIncludedInBuildPlan).collect(Collectors.toList());
+        return this.auxiliaryRepositories.stream().filter(AuxiliaryRepository::shouldBeIncludedInBuildPlan).toList();
     }
 
     public void addAuxiliaryRepository(AuxiliaryRepository repository) {
@@ -332,6 +335,10 @@ public class ProgrammingExercise extends Exercise {
             return;
         }
         // Get course over exerciseGroup for exam programming exercises
+        forceNewProjectKey();
+    }
+
+    public void forceNewProjectKey() {
         Course course = getCourseViaExerciseGroupOrCourseMember();
         this.projectKey = (course.getShortName() + this.getShortName()).toUpperCase().replaceAll("\\s+", "");
     }
